# cddl-aiken

./: .gitignore  404.html  README.md  cabal.project  cddl-aiken.cabal  flake.nix  fourmolu.yaml  index.html  justfile  mkdocs.yml  sitemap.xml
.github/workflows/: ci.yml  docs.yml
app/: Main.hs
architecture/: index.html
cddl-reference/: index.html
design/: index.html
docs/: architecture.md  cddl-reference.md  design.md  e2e-testing.md  generated-code.md  getting-started.md  index.md
e2e-test/: main.hs
e2e-test/CddlAiken/E2E/: WithdrawalSpec.hs
e2e-test/data/: cage-request-blueprint.json
e2e-testing/: index.html
examples/: cage-request.cddl
generated-code/: index.html
getting-started/: index.html
search/: search_index.json
src/CddlAiken/: Compiler.hs
src/CddlAiken/Aiken/: Cbor.hs  Generator.hs
src/CddlAiken/Cddl/: Parser.hs  Types.hs
test/: Main.hs
test/Test/Aiken/: Generator.hs
test/Test/Cddl/: Parser.hs
