cabal-version: 3.0
name:          cddl-aiken
version:       0.1.0
synopsis:      CDDL to Aiken withdrawal validator compiler
license:       Apache-2.0
license-file:  LICENSE
author:        Paolo Veronelli
maintainer:    paolo.veronelli@gmail.com

common warnings
  ghc-options:
    -Wall -Werror -Wunused-imports -Wunused-packages
    -Wmissing-export-lists -Wname-shadowing -Wredundant-constraints
  default-extensions:
    DerivingStrategies
    OverloadedStrings

library
  import:           warnings
  hs-source-dirs:   src
  default-language: GHC2021
  exposed-modules:
    CddlAiken.Aiken.Cbor
    CddlAiken.Aiken.Generator
    CddlAiken.Cddl.Parser
    CddlAiken.Cddl.Types
    CddlAiken.Compiler
  build-depends:
    , base           >=4.18  && <5
    , bytestring     >=0.11  && <1
    , containers     >=0.6   && <1
    , megaparsec     >=9.0   && <10
    , text           >=2.0   && <3

executable cddl-aiken
  import:           warnings
  hs-source-dirs:   app
  main-is:          Main.hs
  default-language: GHC2021
  build-depends:
    , base        >=4.18 && <5
    , cddl-aiken
    , directory   >=1.3  && <2
    , filepath    >=1.4  && <2
    , text        >=2.0  && <3

test-suite unit-tests
  import:           warnings
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  default-language: GHC2021
  other-modules:
    Test.Cddl.Parser
    Test.Aiken.Generator
  build-depends:
    , base           >=4.18 && <5
    , cddl-aiken
    , hspec          >=2.0  && <3
    , text           >=2.0  && <3
